# apriltag2

./: .gitignore  CMakeLists.txt  blur_test.py  cgo.go  cgo_static.go  detect_apriltag.cpp  detect_apriltag.go  detect_apriltag.h  detect_apriltag_test.go  go.mod  go.sum  main.cpp  tag.go  tag_test.go
ethz_apriltag2/: CMakeLists.txt
ethz_apriltag2/src/example/: apriltags_demo.cpp
